--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,11 @@
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.mariadb.jdbc</groupId>
+            <artifactId>mariadb-java-client</artifactId>
+            <version>3.4.1</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -118,7 +123,7 @@
                         <id>default-cli</id>
                         <configuration>
                             <mainClass>
-                                pl.galusgaming.bibliotekagraficzna/pl.galusgaming.bibliotekagraficzna.HelloApplication
+                                pl.galusgaming.bibliotekagraficzna/pl.galusgaming.bibliotekagraficzna.Main
                             </mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
